Should be ready for preview

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Simple portfolio made with React and Mantine."
-    />
+    <meta name="author" content="Giuseppe Del Campo" />
+    <meta name="description" content="Simple portfolio made with React and Mantine." />
+    <title>Simple Portfolio Template</title>
 
-    <title>Mantine Portfolio</title>
+    <link rel="icon" href="/favicon.svg" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
