--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,19 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Giuseppe Del Campo" />
-    <meta name="description" content="Simple portfolio made with React and Mantine." />
+    <meta name="description" content="Simple portfolio template made with React and Mantine." />
     <title>Simple Portfolio Template</title>
+
+    <meta property="og:title" content="Simple Portfolio Template" />
+    <meta property="og:description" content="Simple portfolio template made with React and Mantine." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://simpleportfoliotemplate.netlify.app/" />
+    <meta property="og:image" content="sample.png" />
 
     <link rel="icon" href="/favicon.svg" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
   </body>
 </html>
