--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Giuseppe Del Campo" />
-    <meta name="description" content="Simple portfolio template made with React and Mantine." />
-    <title>Simple Portfolio Template</title>
+    <meta name="description" content="Simple Mantine template made with React and Mantine." />
+    <title>Simple Mantine Template</title>
 
-    <meta property="og:title" content="Simple Portfolio Template" />
-    <meta property="og:description" content="Simple portfolio template made with React and Mantine." />
+    <meta property="og:title" content="Simple Mantine Template" />
+    <meta property="og:description" content="Simple Mantine template made with React and Mantine." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://mantineportfoliotemplate.netlify.app/" />
+    <meta property="og:url" content="https://mantinetemplate.netlify.app/" />
     <meta property="og:image" content="sample.png" />
 
     <link rel="icon" href="/favicon.svg" />
