--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,17 @@
     <meta name="description" content="Simple Mantine template made with React and Mantine." />
     <title>Simple Mantine Template</title>
 
+    <!-- OG Properties -->
     <meta property="og:title" content="Simple Mantine Template" />
     <meta property="og:description" content="Simple Mantine template made with React and Mantine." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://mantinetemplate.netlify.app/" />
     <meta property="og:image" content="sample.png" />
+
+    <!-- Custom Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
     <link rel="icon" href="/favicon.svg" />
   </head>
